<resources>
    <string name="app_name">ARF</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Nombre escenario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="augmented_reality_furniture">Augmented Reality Furniture</string>
    <string name="email_user_gmail_com">correo_usr@gmail.com</string>
    <string name="action_quit">Cerrar sesión</string>
    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Password</string>
    <string name="contrasenia">Contraseña</string>
    <string name="nombreEscenario">Nombre de escenario</string>
    <string name="tipo_habitacion">Tipo de interior</string>
    <string name="tam_habitacion">Tamaño (metros)</string>
    <string name="tipo_Muebles">Tipo de muebles</string>
    <string name="presupuesto">Presupuesto (MXN)</string>
    <string name="repeat_pass">Repetír contraseña</string>
    <string name="reg_contrasenia">Contraseña</string>
    <string name="correo_reg">Correo electrónico</string>
    <string name="nombre_registro">Nombre</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="confirm_new_pass">Confirmar contraseña</string>
    <string name="email_recovery">Correo</string>
    <string name="code_recovery">Código de recuperación</string>
    <string name="usuario">Usuario:</string>
    <string name="id">Id:</string>
    <string name="proyecto">Proyecto:</string>
    <string name="interior">Interior:</string>
    <string name="tama_o">Tamaño:</string>
    <string name="muebles">Muebles:</string>
    <string name="presupuesto_menu">Presupuesto:</string>
    <string name="proyectos_verTutorial">Ver tutorial</string>
    <string name="proyectos_cerrar_sesion">Cerrar sesión</string>
    <string name="guardar_sesion">Mantener sesión abierta</string>
</resources>
