<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Registro.RegistroActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">
        <ImageButton
            android:id="@+id/btn_back_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:backgroundTint="@color/blanco"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REGISTRAR CUENTA ARF"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/header_txt_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="Ingrese sus datos"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/nombre_usr_reg"
                android:hint="@string/nombre_registro"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorWhite"
                android:ems="12"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/correo_usr_reg"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:ems="10"
                android:hint="@string/correo_reg"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/pwd_usr_reg"
                android:hint="@string/reg_contrasenia"
                android:textColorHint="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:ems="10"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/image_button_margin">
            <EditText
                android:id="@+id/pass_usr_repeat"
                android:hint="@string/repeat_pass"
                android:textColorHint="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:ems="10"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_acceso_reg"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="REGISTRAR"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>












    <!--TextView
        android:id="@+id/textViewInstruccionesPass"
        android:layout_width="242dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="La contraseña debe contener al menos un dígito, una letra mayúscula, un caracter especial y al menos 8 carácteres para ser válida."
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo_usr_reg" /-->
</LinearLayout>