<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">
        <ImageButton
            android:id="@+id/btn_back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:backgroundTint="@color/blanco"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ARF"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textViewCorreoUsr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Iniciar sesión"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/correo_usr_login"
                    android:hint="@string/prompt_email"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@color/colorWhite"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text=""
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/pwd_usr_login"
                    android:hint="@string/contrasenia"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@color/colorWhite"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text=""/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btn_recuperar_pass"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@android:color/transparent"
            android:text="¿Olvidaste tu contraseña?"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_dark_nodisable"
            android:textSize="12sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwd_usr_login" />
        <Button
            android:id="@+id/btn_acceso_login"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="Ingresar"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_recuperar_pass"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/guardar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="left|center"
        android:checked="true"
        android:text="@string/guardar_sesion"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/progressbar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/spinner" />
</LinearLayout>